# cpair

./: .codecov.yml  Makefile  README.md  pyproject.toml
.github/workflows/: automated-tests.yml  codeql.yml  publish.yml
tests/: __init__.py  cpair.py  point.py
