[tool.poetry]
name = "cpair"
version = "1.0.0"
description = "Python library to find the closest pair of points in a set, with linear asymptotic time complexity."
authors = ["Kian Cross <kian@kiancross.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.902"
black = "^21.6b0"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
