[tool.poetry]
name = "cpair"
version = "1.0.0"
description = "Python library to find the closest pair of points in a set, with linear asymptotic time complexity."
authors = ["Kian Cross <kian@kiancross.co.uk>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kiancross/cpair"
repository = "https://github.com/kiancross/cpair"
documentation = "https://github.com/kiancross/cpair#readme"
keywords = ["closest", "pair", "points", "linear", "sieve"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.982"
black = "^21.12b0"
coverage = "^6.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
